@@ -1,0 +1,1 @@
+{ft(f(a)),decomp2(f,a),decomp(f,a),arity(1)}
