@@ -72,6 +72,7 @@ libdlvhex2_base_la_SOURCES = \
     ExternalLearningHelper.cpp \
     ExtSourceProperties.cpp \
     FLPModelGeneratorBase.cpp \
+    FunctionPlugin.cpp \
     GraphvizHelpers.cpp \
     PlainAuxPrinter.cpp \
     PlainModelGenerator.cpp \
